Fixed readme and improved first two lectures

--- a/IOT_n_national_accounts/IOT_n_national.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national.ipynb
@@ -24,6 +24,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8ee1b689-c727-4b94-9c06-8212dc47c246",
    "metadata": {},
@@ -34,7 +35,7 @@
     "\n",
     "- Data source 1: eurostat, national accounts, main GDP aggregates https://ec.europa.eu/eurostat/data/database?node_code=lfsq\n",
     "\n",
-    "- Data source 2: CBS https://www.cbs.nl/en-gb/custom/2020/29/supply-and-use-input-output-and-sector-accounts\n",
+    "- Data source 2: CBS https://www.cbs.nl/-/media/_excel/2022/27/83-inputoutput-tables-20152021.xlsx\n",
     "\n",
     "Obtain, plot, and analyze the GDP time series for all years available"
    ]
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "89a776a4-3fd8-46c1-9940-53765b5dcbad",
    "metadata": {},
    "outputs": [
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "6b6d5aaa",
    "metadata": {},
    "outputs": [],
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "342a2a9e",
    "metadata": {},
    "outputs": [],
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "adcdf780",
    "metadata": {},
    "outputs": [
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "febb2ccf",
    "metadata": {},
    "outputs": [],
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "00a59880",
    "metadata": {},
    "outputs": [],
@@ -282,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "2d8c9bae",
    "metadata": {},
    "outputs": [],
@@ -298,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "20d14d57",
    "metadata": {},
    "outputs": [],
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "bce4aa27",
    "metadata": {},
    "outputs": [
@@ -376,26 +377,25 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2f0fdec0-964b-442a-9689-32403f186e87",
    "metadata": {},
    "source": [
     "## Exercise 2\n",
     "\n",
-    "Using the CBS data plot a graph showing the yearly GDP change\n",
+    "Using the CBS data calculate the total GDP total and its composition using the three approaches\n",
     "\n",
-    "- income perspective (GDP = Total National Income + Sales Taxes + Depreciation + Net Foreign Factor Income)\n",
-    "- expenditure perspective (GDP = Consumption + Investment + Government Spending + Net Export)\n",
-    "- production perspective (GDP =  sum of all value added of all production activities)\n",
+    "Methods can be found using the following link in the file \"2 Macroeconomic totals.xlsx\" \n",
     "\n",
-    "Calculate the total GDP total and its composition using the three approaches for CBS IO data\n",
+    "https://www.cbs.nl/en-gb/custom/2022/27/national-accounts-2021-tables\n",
     "\n",
     "Tip: once you download the data have a good look at how it is structure, how the labels are organized.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "f4158925-2d16-4901-a5f1-08c422e976aa",
    "metadata": {},
    "outputs": [
@@ -403,16 +403,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['IO-table 2015 current prices', 'IO-table 2016 current prices', 'IO-table 2016 PY prices', 'IO-table 2017 current prices', 'IO-table 2017 PY prices', 'IO-table 2018 current prices', 'IO-table 2018 PY prices', 'IO-table 2019 current prices', 'IO-table 2019 PY prices', 'Explanation']\n"
+      "IO-table 2015 current prices\n",
+      "IO-table 2016 current prices\n",
+      "IO-table 2016 PY prices\n",
+      "IO-table 2017 current prices\n",
+      "IO-table 2017 PY prices\n",
+      "IO-table 2018 current prices\n",
+      "IO-table 2018 PY prices\n",
+      "IO-table 2019 current prices\n",
+      "IO-table 2019 PY prices\n",
+      "IO-table 2020 current prices\n",
+      "IO-table 2020 PY prices\n",
+      "IO-table 2021 current prices\n",
+      "IO-table 2021 PY prices\n",
+      "Explanation\n"
      ]
     }
    ],
    "source": [
     "# Load the IO data\n",
-    "CBS_IO = pd.ExcelFile(f\"data/CBS/Input-Output tables 2015-2019.xlsx\", engine=\"openpyxl\")\n",
+    "CBS_IO = pd.ExcelFile(f\"data/CBS/83 InputOutput tables 20152021.xlsx\", engine=\"openpyxl\")\n",
     "\n",
     "# Print the list of sheets that are available in the xlsx file so that you can investigate what options you have\n",
-    "print(CBS_IO.sheet_names)"
+    "print(*CBS_IO.sheet_names, sep=\"\\n\")"
    ]
   },
   {
@@ -425,34 +438,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "9a38df65",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Parse the sheet for 2019 in current prices\n",
-    "IO_2019_cp = CBS_IO.parse(\"IO-table 2019 current prices\", index_col=1, header=1, skipfooter=3)\n",
+    "# Parse the sheet for 2021 in current prices\n",
+    "IO_2021_cp = CBS_IO.parse(\"IO-table 2021 current prices\", index_col=1, header=1, skipfooter=3)\n",
     "\n",
-    "IO_2019_cp = IO_2019_cp.iloc[1:, 1:].fillna(0)\n",
+    "IO_2021_cp = IO_2021_cp.iloc[1:, 1:].fillna(0)\n",
     "\n",
     "# Labels sometimes have leading and trailing white spaces which makes it difficult to then slice the dataframe\n",
-    "IO_2019_cp.columns = IO_2019_cp.columns.str.strip()\n",
-    "IO_2019_cp.index = IO_2019_cp.index.str.strip()\n",
+    "IO_2021_cp.columns = IO_2021_cp.columns.str.strip()\n",
+    "IO_2021_cp.index = IO_2021_cp.index.str.strip()\n",
     "# There could also be errors in labels, always check. It won't matter for this exercise but keep in mind for the future. \n",
     "# Examples of mistakes are typos, wrong translaction, encoding issues \n",
     "\n",
     "# Negative items\n",
     "# Makes sure that the items marked with a negative sign in their labels are indeed negative\n",
     "items_with_neg = [\"Subsidies on domestic products (–)\",\"Import subsidies (–)\",\"Other subsidies on production (–)\"]\n",
-    "\n",
-    "IO_2019_cp.loc[(items_with_neg)] = IO_2019_cp.loc[items_with_neg] *-1\n",
+    "IO_2021_cp.loc[(items_with_neg)] = IO_2021_cp.loc[items_with_neg] *-1\n",
     "\n",
     "# Print the columns and index to understand how the data is structured\n",
     "\n",
-    "# for ind in IO_2019_cp.index:\n",
+    "# for ind in IO_2021_cp.index:\n",
     "#     print(\"index: \", ind)\n",
     "    \n",
-    "# for col in IO_2019_cp.columns:\n",
+    "# for col in IO_2021_cp.columns:\n",
     "#     print(\"column: \", col)"
    ]
   },
@@ -471,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "id": "8a282134",
    "metadata": {},
    "outputs": [
@@ -484,8 +496,8 @@
     }
    ],
    "source": [
-    "total_inputs = IO_2019_cp.loc[\"Total\",:\"Goods and services n.e.c.\"].sum()\n",
-    "total_outputs = IO_2019_cp.loc[:\"Goods and services n.e.c.\",\"Total\"].sum()\n",
+    "total_inputs = IO_2021_cp.loc[\"Total\",:\"Goods and services n.e.c.\"].sum()\n",
+    "total_outputs = IO_2021_cp.loc[:\"Goods and services n.e.c.\",\"Total\"].sum()\n",
     "\n",
     "print(f\"Inputs and Outputs match: {total_inputs/total_outputs*100}%\")"
    ]
@@ -500,20 +512,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "id": "1f5fc6ef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "IO_GDP_approaches_results = {\"income\": None, \"expenditure\": None, \"production\": None}"
+    "IO_GDP_approaches_results = {\"production\": None, \"income\": None, \"expenditure\": None}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 67,
+   "id": "f30c17da-c367-4094-9b51-86ad2756dee9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "762564.0"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Production perspective\n",
+    "\n",
+    "production_items = [\"Other taxes on production\", \n",
+    "                    \"Other subsidies on production (–)\",\n",
+    "                    \"Wages and salaries\", \n",
+    "                    \"Employers' social contributions\", \n",
+    "                    \"Operating surplus (gross)\"]\n",
+    "\n",
+    "prod_approach_breakdown = IO_2021_cp.loc[production_items, :\"Goods and services n.e.c.\"]\n",
+    "IO_GDP_approaches_results[\"production\"] = prod_approach_breakdown.values.sum()\n",
+    "IO_GDP_approaches_results[\"production\"]\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "324fa8c8",
+   "metadata": {},
+   "source": [
+    "**But wait! What is the value that we obtained from Eurostat and that we see in the macro economic totals documentation of CBS?**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "86140cd0",
+   "metadata": {},
+   "source": [
+    "In CBS IO tables value added is reported at basic price. So we need to add taxes and subtract subsidies to obtain the actual GDP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "96dae8ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "856356.0"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# From GDP at basic price to actual GDP\n",
+    "\n",
+    "taxes_less_subsidies_items = [\"Import duties\", \"Other taxes on imports\", \"Taxes on domestic products\", \"Import subsidies (–)\",\"Subsidies on domestic products (–)\"]\n",
+    "taxes_less_subsidies = IO_2021_cp.loc[taxes_less_subsidies_items, \"Total (1–81)\":\"Trade and transport margins\"]\n",
+    "IO_GDP_approaches_results[\"production\"] + taxes_less_subsidies.values.sum()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "727a576f",
+   "metadata": {},
+   "source": [
+    "**In the next lecture on SUTs and National Accounts we will discuss the topic of valuations and why values may differ, although at first sight they may seem to refer to the same statistic**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "id": "7a386c66-b7a8-4be5-8c33-713c682ebb99",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "785267.0"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Income perspective\n",
     "\n",
@@ -529,17 +635,30 @@
     "                \"Other subsidies on production (–)\"\n",
     "                ]\n",
     "\n",
-    "income_breakdown = IO_2019_cp.loc[income_items, :\"Goods and services n.e.c.\"]\n",
+    "income_breakdown = IO_2021_cp.loc[income_items, :\"Goods and services n.e.c.\"]\n",
     "\n",
-    "IO_GDP_approaches_results[\"income\"] = income_breakdown.values.sum()"
+    "IO_GDP_approaches_results[\"income\"] = income_breakdown.values.sum()\n",
+    "\n",
+    "IO_GDP_approaches_results[\"income\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "id": "cac67f38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "751952.0"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Expenditure perspective\n",
     "\n",
@@ -565,34 +684,16 @@
     "                'Trade and transport margins'\n",
     "                ]\n",
     "\n",
-    "expenditure_breakdown = IO_2019_cp.loc[:\"Goods and services n.e.c.\", expenditure_items]\n",
-    "imports = IO_2019_cp.loc[imports_items, expenditure_items]\n",
+    "expenditure_breakdown = IO_2021_cp.loc[:\"Goods and services n.e.c.\", expenditure_items]\n",
+    "imports = IO_2021_cp.loc[imports_items, expenditure_items]\n",
     "\n",
-    "IO_GDP_approaches_results[\"expenditure\"] = expenditure_breakdown.values.sum() - imports.values.sum()\n"
+    "IO_GDP_approaches_results[\"expenditure\"] = expenditure_breakdown.values.sum() - imports.values.sum()\n",
+    "IO_GDP_approaches_results[\"expenditure\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "f30c17da-c367-4094-9b51-86ad2756dee9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Production perspective\n",
-    "\n",
-    "production_items = [\"Other taxes on production\", \n",
-    "                    \"Other subsidies on production (–)\", \n",
-    "                    \"Wages and salaries\", \n",
-    "                    \"Employers' social contributions\", \n",
-    "                    \"Operating surplus (gross)\"]\n",
-    "\n",
-    "prod_approach_breakdown = IO_2019_cp.loc[production_items, :\"Goods and services n.e.c.\"]\n",
-    "IO_GDP_approaches_results[\"production\"] = prod_approach_breakdown.values.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "id": "36be71bb",
    "metadata": {},
    "outputs": [
@@ -600,20 +701,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "722150.0\n",
-      "income approach results: 742738.0 results are off by 3%\n",
-      "expenditure approach results: 721768.0 results are off by 0%\n",
-      "production approach results: 722150.0 results are off by 0%\n"
+      "production approach results: 762564.0 results are off by 0%\n",
+      "income approach results: 785267.0 results are off by 3%\n",
+      "expenditure approach results: 751952.0 results are off by -1%\n"
      ]
     }
    ],
    "source": [
     "# Calculate the production perspective use the Value added row\n",
     "# we use the value added row provided by the table as a reference to see whether our calculations are correct\n",
-    "value_added = IO_2019_cp.loc[\"Value added at basic prices (92–96)\" , :\"Goods and services n.e.c.\"]\n",
+    "value_added = IO_2021_cp.loc[\"Value added at basic prices (92–96)\" , :\"Goods and services n.e.c.\"]\n",
     "VA_total = value_added.values.sum()\n",
-    "\n",
-    "print(VA_total)\n",
     "\n",
     "for l in IO_GDP_approaches_results:\n",
     "    print(f\"{l} approach results: {IO_GDP_approaches_results[l]} results are off by {round((1-VA_total/IO_GDP_approaches_results[l])*100)}%\")\n"
@@ -636,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.2"
   },
   "vscode": {
    "interpreter": {
