--- a/leontief_n_ghosh_models/ghosh_toy_model.ipynb
+++ b/leontief_n_ghosh_models/ghosh_toy_model.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "insurance          300          700         3000       2000               1000"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,18 +166,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'env_eeio' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/fdona/Documents/virtual_environments/env_eeio/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>industry</th>\n",
+       "      <th>rice farm</th>\n",
+       "      <th>cattle farm</th>\n",
+       "      <th>power plant</th>\n",
+       "      <th>car maker</th>\n",
+       "      <th>insurance company</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Value added</th>\n",
+       "      <td>2500</td>\n",
+       "      <td>2400</td>\n",
+       "      <td>9600</td>\n",
+       "      <td>16000</td>\n",
+       "      <td>8500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "industry     rice farm  cattle farm  power plant  car maker  insurance company\n",
+       "Value added       2500         2400         9600      16000               8500"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -188,27 +228,84 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Final value of the products sold\n",
-    "KEEP IN MIND THE SHAPE!"
+    "#### Final value of the products sold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'env_eeio' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/fdona/Documents/virtual_environments/env_eeio/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Final Demand</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>product</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>rice</th>\n",
+       "      <td>3000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>beef</th>\n",
+       "      <td>9000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>electricity</th>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>car</th>\n",
+       "      <td>14000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>insurance</th>\n",
+       "      <td>8000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Final Demand\n",
+       "product                  \n",
+       "rice                 3000\n",
+       "beef                 9000\n",
+       "electricity          5000\n",
+       "car                 14000\n",
+       "insurance            8000"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -226,18 +323,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'env_eeio' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/fdona/Documents/virtual_environments/env_eeio/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>industry</th>\n",
+       "      <th>rice farm</th>\n",
+       "      <th>cattle farm</th>\n",
+       "      <th>power plant</th>\n",
+       "      <th>car maker</th>\n",
+       "      <th>insurance company</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>extensions</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Water Use (L)</th>\n",
+       "      <td>10000</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>15000</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CO2 Emissions (kg)</th>\n",
+       "      <td>50</td>\n",
+       "      <td>500</td>\n",
+       "      <td>7500</td>\n",
+       "      <td>300</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "industry            rice farm  cattle farm  power plant  car maker  \\\n",
+       "extensions                                                           \n",
+       "Water Use (L)           10000         2000        15000       1000   \n",
+       "CO2 Emissions (kg)         50          500         7500        300   \n",
+       "\n",
+       "industry            insurance company  \n",
+       "extensions                             \n",
+       "Water Use (L)                     750  \n",
+       "CO2 Emissions (kg)                 15  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -268,73 +428,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'env_eeio' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/fdona/Documents/virtual_environments/env_eeio/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>product</th>\n",
+       "      <th>rice</th>\n",
+       "      <th>beef</th>\n",
+       "      <th>electricity</th>\n",
+       "      <th>car</th>\n",
+       "      <th>insurance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Total product output x</th>\n",
+       "      <td>5000</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>15000</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>15000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "product                 rice   beef  electricity    car  insurance\n",
+       "Total product output x  5000  10000        15000  20000      15000"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "Z_sum = Z.sum(axis=1, keepdims=True)  # shape (5, 1)\n",
-    "x_out = Z_sum + y\n",
-    "x = x_out\n",
-    "x_out"
+    "Z_sum = Z.sum(axis=1)  # shape (5, 1)\n",
+    "x = Z_sum + y.T\n",
+    "x.index = [\"Total product output x\"]\n",
+    "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'env_eeio' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/fdona/Documents/virtual_environments/env_eeio/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>industry</th>\n",
+       "      <th>rice farm</th>\n",
+       "      <th>cattle farm</th>\n",
+       "      <th>power plant</th>\n",
+       "      <th>car maker</th>\n",
+       "      <th>insurance company</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Value added</th>\n",
+       "      <td>5000</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>15000</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>15000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "industry     rice farm  cattle farm  power plant  car maker  insurance company\n",
+       "Value added       5000        10000        15000      20000              15000"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Total inputs: intermediate input + value added\n",
-    "Z_sum = Z.sum(axis=0, keepdims=True)  # shape (1, 5)\n",
+    "Z_sum = Z.sum(axis=0)  # shape (1, 5)\n",
     "x_in = Z_sum + v\n",
     "x_in"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'env_eeio' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/fdona/Documents/virtual_environments/env_eeio/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
-     ]
+     "data": {
+      "text/plain": [
+       "industry\n",
+       "rice farm            10000\n",
+       "cattle farm           2000\n",
+       "power plant          15000\n",
+       "car maker             1000\n",
+       "insurance company      750\n",
+       "Name: Water Use (L), dtype: int32"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Task 2 use of water, CO2 and wage payment.\n",
     "# Use of water -> F water divided by total output\n",
     "# Make sure to transpose x to ensure a (1, 5) shape\n",
-    "F_water = F[\"Water Use (L)\"]\n",
-    "f_water = F_water / x.transpose()\n",
-    "f_water"
+    "F_water = F.loc[\"Water Use (L)\"]\n",
+    "# f_water = F_water * 1/x\n",
+    "# f_water\n",
+    "\n",
+    "F_water"
    ]
   },
   {
@@ -738,7 +986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.2"
   },
   "vscode": {
    "interpreter": {
