updated exercise to include conversion of inputs

--- a/supply_n_use_tables/supply_n_use_tables.ipynb
+++ b/supply_n_use_tables/supply_n_use_tables.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -67,6 +67,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import style\n",
+    "np.set_printoptions(suppress=True)\n",
     "plt.style.use('bmh')\n",
     "\n",
     "# Import data\n",
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,6 +397,10 @@
     "# Negative items\n",
     "W.loc[\"Other subsidies on production (–)\"] = W.loc[\"Other subsidies on production (–)\"] * -1\n",
     "\n",
+    "# Imports\n",
+    "imports_n_tm = supply_2021_cp.loc[:\"Other goods n.e.c.\", [\"Imports of goods\",\"Imports of services\", \"Trade and transport margins\"]] #\"Imports of goods\":\"Subsidies on products (–)\"]\n",
+    "# imports_n_tm = imports_n_tm.drop(\"Supply at basic prices (columns 82–85)\", axis=1)\n",
+    "\n",
     "# Collect your total product and industry outputs\n",
     "q = supply_2021_cp.loc[:\"Other goods n.e.c.\",\"Total\"]\n",
     "g = supply_2021_cp.loc[\"Supply at basic prices\",:\"Goods and services n.e.c.\"]"
@@ -403,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +419,8 @@
     "W = W.values\n",
     "F = F.values\n",
     "q = q.values\n",
-    "g = g.values"
+    "g = g.values\n",
+    "imp = imports_n_tm.values"
    ]
   },
   {
@@ -431,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,6 +455,9 @@
     "# Primary inputs\n",
     "W_b = W @ np.linalg.inv(np.diag(g)) @ V\n",
     "\n",
+    "# Imports\n",
+    "imp_b = imp\n",
+    "\n",
     "# Total product output\n",
     "I = np.eye(q.shape[0])\n",
     "x_b = np.linalg.inv(I-A_b) @ Y_b @ np.ones(Y_b.shape[1])"
@@ -456,27 +465,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 69.8  14.6  -6.   67.9  79.7 100.   89.4 100.   66.1  24.3  53.5  54.5\n",
-      "  48.2  42.1  49.8  52.5  22.7  70.3  60.1  71.2  97.6  95.6  64.4  55.\n",
-      " -10.9  51.4  55.6  81.   65.1  58.1  68.8  41.5  88.3  82.4  52.6  68.6\n",
-      "  59.4  70.   90.7   2.1  -5.8  18.6  21.4   9.2   8.9   4.8  -3.4  15.5\n",
-      "  16.4   3.1  14.4  17.1  -6.7  27.5   5.3   5.9  20.6  17.6  -6.8  18.\n",
-      "  12.2   9.8  15.   11.7   5.8 -16.1  26.5  11.    9.4  22.1  21.4  -1.8\n",
-      "  10.1  10.9 -14.6   3.  -22.9   0.4   4.7  -0.5   0.3  14.8   6.6  18.2\n",
-      "   4.1  -3.8  12.2   6.5 100.   -8.7]\n"
+      "[  0.2  -3.8  -6.   -0.3   0.8  -9.2  10.2  -2.5  -2.4  -3.1   2.9   4.4\n",
+      "  -2.9   1.3   3.6   0.9  -0.4  15.1  33.8   5.1  10.6   8.   -3.8  -2.1\n",
+      " -14.7  10.8  -0.1   1.8  -2.   -0.7  -3.4  -2.8   1.   -0.5  -1.3   3.8\n",
+      "   4.3   7.9   4.  -10.8 -16.3  17.8  -0.5   8.7   3.1   3.   -3.4 -55.5\n",
+      "  16.4 -20.8 -13.8  -1.1 -29.4 -12.    3.9   5.6  -3.6  -7.2  -6.8   2.4\n",
+      "  -4.6  -7.4  -6.5   8.5  -3.9 -16.2  15.3 -21.2   1.9 -23.7 -17.   10.1\n",
+      " -16.  -15.8   0.3 -24.    0.2  -8.9  -0.6  -0.2  -6.3   1.5   9.3   3.8\n",
+      "  -3.8   0.4   5.3  -2.8  -8.7]\n"
      ]
     }
    ],
    "source": [
     "# Check balance\n",
-    "x_in = Z_b.sum(axis=0) + W_b.sum(axis=0)\n",
+    "x_in = Z_b.sum(axis=0) + W_b.sum(axis=0) + imp_b.sum(axis=1)\n",
     "check_x = np.around(1-x_in / x_b, decimals=3) * 100\n",
     "\n",
     "print(check_x[check_x!=0.0])"
@@ -506,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,16 +526,45 @@
     "# Intermediates\n",
     "Z_d = A_d @ np.diag(g)\n",
     "\n",
-    "\n",
     "# Final Demand\n",
     "Y_d = V @ np.linalg.inv(np.diag(q)) @ F\n",
     "\n",
     "# Primary inputs\n",
     "W_d = W\n",
     "\n",
+    "# Imports\n",
+    "imp_d = V @ np.linalg.inv(np.diag(q)) @ imp\n",
+    "\n",
     "# Total product output\n",
     "I = np.eye(g.shape[0])\n",
     "x_d = np.linalg.inv(I-A_d) @ Y_d @ np.ones(Y_d.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ -39.    -9.1  -53.4 -111.1  -72.2    6.4    6.7   -9.4    6.3  -22.6\n",
+      "  -78.7  -37.6  -28.8   27.   -15.5  -40.6  -40.5  -65.8  -45.   -38.7\n",
+      "  -15.   -66.3  -17.5   -8.6   17.2  -10.   -31.2  -39.4  -46.4   -9.2\n",
+      "  -19.8   47.    19.7  -11.8  -32.9 -158.6 -603.5  -46.7  -11.2   23.1\n",
+      "  -63.7  -49.    31.    26.4  -30.3   -9.   -42.3  -17.5  -29.3  -20.2\n",
+      "  -77.1   45.7  -48.6   50.5  -35.1  -50.9  -62.9  -12.6    5.9  -88.5\n",
+      "  -85.    -2.9  -45.8 -115.    41.  -106.4  -49.4  -34.8   29.     8.6\n",
+      "   24.3   25.2  -15.5   28.2   21.9   28.2    7.5  -17.4   11.5   -8.8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_in = Z_d.sum(axis=1) + W_d.sum(axis=0) + imp_d.sum(axis=1)\n",
+    "check_x_ = np.around(1-x_in / x_d, decimals=3) * 100\n",
+    "\n",
+    "print(check_x_[check_x_!=0.0])"
    ]
   }
  ],
