--- a/IOT_n_national_accounts/IOT_n_national.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national.ipynb
@@ -24,7 +24,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8ee1b689-c727-4b94-9c06-8212dc47c246",
    "metadata": {},
@@ -59,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "89a776a4-3fd8-46c1-9940-53765b5dcbad",
    "metadata": {},
    "outputs": [
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6b6d5aaa",
    "metadata": {},
    "outputs": [],
@@ -139,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "342a2a9e",
    "metadata": {},
    "outputs": [],
@@ -155,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "adcdf780",
    "metadata": {},
    "outputs": [
@@ -217,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "febb2ccf",
    "metadata": {},
    "outputs": [],
@@ -233,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "00a59880",
    "metadata": {},
    "outputs": [],
@@ -283,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "2d8c9bae",
    "metadata": {},
    "outputs": [],
@@ -299,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "20d14d57",
    "metadata": {},
    "outputs": [],
@@ -340,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "bce4aa27",
    "metadata": {},
    "outputs": [
@@ -377,7 +376,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2f0fdec0-964b-442a-9689-32403f186e87",
    "metadata": {},
@@ -395,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "f4158925-2d16-4901-a5f1-08c422e976aa",
    "metadata": {},
    "outputs": [
@@ -438,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "9a38df65",
    "metadata": {},
    "outputs": [],
@@ -483,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "8a282134",
    "metadata": {},
    "outputs": [
@@ -512,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 48,
    "id": "1f5fc6ef",
    "metadata": {},
    "outputs": [],
@@ -522,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 59,
    "id": "f30c17da-c367-4094-9b51-86ad2756dee9",
    "metadata": {},
    "outputs": [
@@ -532,7 +530,7 @@
        "762564.0"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +550,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "324fa8c8",
    "metadata": {},
@@ -566,12 +563,12 @@
    "id": "86140cd0",
    "metadata": {},
    "source": [
-    "In CBS IO tables value added is reported at basic price. So we need to add taxes and subtract subsidies to obtain the actual GDP"
+    "In the CBS IOTs, value added is reported at basic price. We need to add taxes and subtract subsidies to obtain the actual GDP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 60,
    "id": "96dae8ff",
    "metadata": {},
    "outputs": [
@@ -581,26 +578,17 @@
        "856356.0"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# From GDP at basic price to actual GDP\n",
-    "\n",
     "taxes_less_subsidies_items = [\"Import duties\", \"Other taxes on imports\", \"Taxes on domestic products\", \"Import subsidies (–)\",\"Subsidies on domestic products (–)\"]\n",
     "taxes_less_subsidies = IO_2021_cp.loc[taxes_less_subsidies_items, \"Total (1–81)\":\"Trade and transport margins\"]\n",
-    "IO_GDP_approaches_results[\"production\"] + taxes_less_subsidies.values.sum()\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "727a576f",
-   "metadata": {},
-   "source": [
-    "**In the next lecture on SUTs and National Accounts we will discuss the topic of valuations and why values may differ, although at first sight they may seem to refer to the same statistic**"
+    "IO_GDP_approaches_results[\"production\"] = IO_GDP_approaches_results[\"production\"] + taxes_less_subsidies.values.sum()\n",
+    "IO_GDP_approaches_results[\"production\"]"
    ]
   },
   {
@@ -612,7 +600,7 @@
     {
      "data": {
       "text/plain": [
-       "785267.0"
+       "856356.0"
       ]
      },
      "execution_count": 56,
@@ -635,7 +623,8 @@
     "                \"Other subsidies on production (–)\"\n",
     "                ]\n",
     "\n",
-    "income_breakdown = IO_2021_cp.loc[income_items, :\"Goods and services n.e.c.\"]\n",
+    "income_breakdown = IO_2021_cp.loc[income_items]\n",
+    "income_breakdown = income_breakdown.drop([\"Total (1–81)\",\"Total\"] ,axis=1)\n",
     "\n",
     "IO_GDP_approaches_results[\"income\"] = income_breakdown.values.sum()\n",
     "\n",
@@ -644,17 +633,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "id": "cac67f38",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "751952.0"
+       "856356.0"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,29 +660,30 @@
     "                     \"Collective final consumption of general gorvernment\",\n",
     "                     \"Gross fixed capital formation\",\n",
     "                     \"Changes in inventories 1)\",\n",
-    "                     \"Trade and transport margins\"\n",
+    "                     \"Trade and transport margins\",\n",
+    "                     \"Cif/fob-adjustment and reclassification\",\n",
+    "                     \"Cif/fob-reclassification\"                     \n",
     "                     ]\n",
     "\n",
     "imports_items =['Imports of goods',\n",
-    "                'Imports of services',\n",
-    "                'Import duties',\n",
-    "                'Other taxes on imports',\n",
-    "                'Taxes on domestic products',\n",
-    "                'Import subsidies (–)',\n",
-    "                'Subsidies on domestic products (–)',\n",
-    "                'Trade and transport margins'\n",
-    "                ]\n",
+    "                'Imports of services']\n",
     "\n",
-    "expenditure_breakdown = IO_2021_cp.loc[:\"Goods and services n.e.c.\", expenditure_items]\n",
-    "imports = IO_2021_cp.loc[imports_items, expenditure_items]\n",
+    "expenditure_breakdown = IO_2021_cp.loc[:, expenditure_items]\n",
+    "# we eliminate the rows with aggregates and totals\n",
+    "expenditure_breakdown = expenditure_breakdown.drop([\"Total of rows (1–81)\", \"Total intermediate consumption (82–90)\", \"Total\", \"Value added at basic prices (92–96)\"], axis=0)\n",
     "\n",
-    "IO_GDP_approaches_results[\"expenditure\"] = expenditure_breakdown.values.sum() - imports.values.sum()\n",
+    "# We sum all imports to be substracted\n",
+    "imports_Z = IO_2021_cp.loc[imports_items, :\"Goods and services n.e.c.\"].values.sum()\n",
+    "imports_Y = IO_2021_cp.loc[imports_items, expenditure_items].values.sum()\n",
+    "tot_imports = imports_Z + imports_Y\n",
+    "\n",
+    "IO_GDP_approaches_results[\"expenditure\"] = expenditure_breakdown.values.sum() - tot_imports\n",
     "IO_GDP_approaches_results[\"expenditure\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "id": "36be71bb",
    "metadata": {},
    "outputs": [
@@ -701,9 +691,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "production approach results: 762564.0 results are off by 0%\n",
-      "income approach results: 785267.0 results are off by 3%\n",
-      "expenditure approach results: 751952.0 results are off by -1%\n"
+      "production approach results: 856356.0 results are off by 0%\n",
+      "income approach results: 856356.0 results are off by 0%\n",
+      "expenditure approach results: 856356.0 results are off by 0%\n"
      ]
     }
    ],
@@ -711,7 +701,7 @@
     "# Calculate the production perspective use the Value added row\n",
     "# we use the value added row provided by the table as a reference to see whether our calculations are correct\n",
     "value_added = IO_2021_cp.loc[\"Value added at basic prices (92–96)\" , :\"Goods and services n.e.c.\"]\n",
-    "VA_total = value_added.values.sum()\n",
+    "VA_total = value_added.values.sum() + taxes_less_subsidies.values.sum()\n",
     "\n",
     "for l in IO_GDP_approaches_results:\n",
     "    print(f\"{l} approach results: {IO_GDP_approaches_results[l]} results are off by {round((1-VA_total/IO_GDP_approaches_results[l])*100)}%\")\n"
