--- a/IOT_n_national_accounts/IOT_n_national.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national.ipynb
@@ -48,7 +48,7 @@
     "Using the EUROSTAT data plot a graph showing the yearly GDP change using the following approaches\n",
     "\n",
     "- expenditure perspective (GDP = Consumption + Investment + Government Spending + Net Export)\n",
-    "- production perspective (GDP =  sum of all value added of all production activities)\n",
+    "- production perspective (GDP = Sum of all value added of all production activities)\n",
     "- income perspective (GDP = Total National Income + Sales Taxes + Depreciation + Net Foreign Factor Income)\n",
     "\n",
     "Make sure to use the metadata accompanying the data to help you understand all data available within the CSV file and the GDP elements https://ec.europa.eu/eurostat/cache/metadata/en/nama10_esms.htm\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "89a776a4-3fd8-46c1-9940-53765b5dcbad",
    "metadata": {},
    "outputs": [
@@ -68,11 +68,7 @@
      "text": [
       "Index(['DATAFLOW', 'LAST UPDATE', 'freq', 'unit', 'na_item', 'geo',\n",
       "       'TIME_PERIOD', 'OBS_VALUE', 'OBS_FLAG'],\n",
-      "      dtype='object')\n",
-      "['B11' 'B111' 'B112' 'B1G' 'B1GQ' 'B2A3G' 'D1' 'D11' 'D12' 'D2' 'D21'\n",
-      " 'D21X31' 'D2X3' 'D3' 'D31' 'P3' 'P31_S13' 'P31_S14' 'P31_S14_S15'\n",
-      " 'P31_S15' 'P32_S13' 'P3_P5' 'P3_P6' 'P3_S13' 'P41' 'P51G' 'P52' 'P52_P53'\n",
-      " 'P53' 'P5G' 'P6' 'P61' 'P62' 'P7' 'P71' 'P72' 'YA0' 'YA1' 'YA2']\n"
+      "      dtype='object')\n"
      ]
     }
    ],
@@ -93,12 +89,29 @@
     "GDP_data = GDP_data[GDP_data.unit == \"CP_MEUR\"] \n",
     "\n",
     "# print the columns, it will help you understand how you can proceed in selecting the data\n",
-    "print(GDP_data.columns)\n",
+    "print(GDP_data.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0d6d14b-0df0-43a8-85ed-3757dafa5cc7",
+   "metadata": {},
+   "source": [
+    "**Print all unique values in the National Account Item column (na_item) to use as a reference**\n",
     "\n",
-    "# print all unique values in the National Account Item column (na_item) to use as a reference\n",
-    "# You can investigate the what each code means by checking on the European Environment Agency website \n",
-    "# https://dd.eionet.europa.eu/vocabulary/eurostat/na_item/view\n",
-    "print(GDP_data.na_item.unique())\n"
+    "You can investigate the what each code means by checking on the European Environment Agency website \n",
+    "\n",
+    "https://dd.eionet.europa.eu/vocabulary/eurostat/na_item/view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de4aa089-5c9d-4f22-92c8-90d1f73e45bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(GDP_data.na_item.unique())"
    ]
   },
   {
@@ -558,7 +571,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "86140cd0",
    "metadata": {},
@@ -586,7 +598,9 @@
    "source": [
     "# From GDP at basic price to actual GDP\n",
     "taxes_less_subsidies_items = [\"Import duties\", \"Other taxes on imports\", \"Taxes on domestic products\", \"Import subsidies (–)\",\"Subsidies on domestic products (–)\"]\n",
+    "\n",
     "taxes_less_subsidies = IO_2021_cp.loc[taxes_less_subsidies_items, \"Total (1–81)\":\"Trade and transport margins\"]\n",
+    "\n",
     "IO_GDP_approaches_results[\"production\"] = IO_GDP_approaches_results[\"production\"] + taxes_less_subsidies.values.sum()\n",
     "IO_GDP_approaches_results[\"production\"]"
    ]
@@ -624,6 +638,8 @@
     "                ]\n",
     "\n",
     "income_breakdown = IO_2021_cp.loc[income_items]\n",
+    "\n",
+    "# We need to drop the total so that we don't double count\n",
     "income_breakdown = income_breakdown.drop([\"Total (1–81)\",\"Total\"] ,axis=1)\n",
     "\n",
     "IO_GDP_approaches_results[\"income\"] = income_breakdown.values.sum()\n",
@@ -724,7 +740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
