minor corrections and clarifications

--- a/IOT_n_national_accounts/IOT_n_national_sv.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national_sv.ipynb
@@ -407,7 +407,8 @@
     "\n",
     "taxes_less_subsidies = None\n",
     "\n",
-    "IO_GDP_approaches_results[\"production\"] = IO_GDP_approaches_results[\"production\"] + taxes_less_subsidies.values.sum()\n",
+    "# Add taxes less subsidies\n",
+    "IO_GDP_approaches_results[\"production\"] = None\n",
     "IO_GDP_approaches_results[\"production\"]"
    ]
   },
@@ -455,7 +456,8 @@
     "imports_Y = None\n",
     "tot_imports = imports_Z + imports_Y\n",
     "\n",
-    "IO_GDP_approaches_results[\"expenditure\"] = expenditure_breakdown.values.sum() - tot_imports\n",
+    "# Subtract imports from expenditure\n",
+    "IO_GDP_approaches_results[\"expenditure\"] = None\n",
     "IO_GDP_approaches_results[\"expenditure\"]\n"
    ]
   },
