--- a/IOT_n_national_accounts/IOT_n_national_sv.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national_sv.ipynb
@@ -81,13 +81,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e0d6d14b-0df0-43a8-85ed-3757dafa5cc7",
    "metadata": {},
    "source": [
     "**Print all unique values in the National Account Item column (na_item) to use as a reference**\n",
     "\n",
-    "You can investigate the what each code means by checking on the European Environment Agency website \n",
+    "You can investigate what each code means by checking the vocabulary on the European Environment Agency website \n",
     "\n",
     "https://dd.eionet.europa.eu/vocabulary/eurostat/na_item/view"
    ]
